--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="images/search-engine-optimization.jpg" class="float-left" />
+            <img src="images/search-engine-optimization.jpg" class="float-left" alt="mobile-internet"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -38,7 +38,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="images/online-reputation-management.jpg" class="float-right" />
+            <img src="images/online-reputation-management.jpg" class="float-right" alt="online-reputation-managmemt"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -47,7 +47,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="images/social-media-marketing.jpg" class="float-left" />
+            <img src="images/social-media-marketing.jpg" class="float-left" alt="social-media-marketing" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
