--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                         <a href="#social-media-marketing">Social Media Marketing</a>
                     </li>
                 </ul>
+            </nav>
         </div>
-        </nav>
     </div>
     <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="images/search-engine-optimization.jpg" class="float-left" alt="mobile-internet"/>
+            <img src="images/search-engine-optimization.jpg" class="float-left" alt="mobile-internet" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -38,7 +38,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="images/online-reputation-management.jpg" class="float-right" alt="online-reputation-managmemt"/>
+            <img src="images/online-reputation-management.jpg" class="float-right" alt="online-reputation-managmemt" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -82,12 +82,12 @@
             </p>
         </div>
     </aside>
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
