I added viewport in the head tag for accessibility on all devices

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport1" content="width=device-width">
     <link rel="stylesheet" href="style.css">
     <title>website</title>
 </head>
